--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,9 +1,9 @@
 .cardProducto {
-background-color: aliceblue;
+background-color: #fff;
 border-radius: 10px;
 width: 18rem;
 padding: 1rem;
-margin: 1.7rem;
+margin: 1.5rem;
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -17,6 +17,9 @@ align-items: center;
 .imgProducto:hover{
     transform: scale(1.1,1.1);
 }
+.nombreProducto{
+    color: #000;
+}
 .btnProducto{
     background-color: #000;
     color: #fff;
@@ -28,4 +31,5 @@ align-items: center;
 }
 .btnProducto:hover{
     transform: scale(1.1,1.1);
+    color: #00ce1b;
 }
